[gd_scene load_steps=2 format=3 uid="uid://ydlq48uu0ecv"]

[ext_resource type="Script" uid="uid://i2teohs4h3eb" path="res://Components/Tool_interaction_component.gd" id="1_t5u01"]

[node name="ToolInteractionComponent" type="Node"]
script = ExtResource("1_t5u01")

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
